feat(frontend): implement minimal web frontend with wallet connect (#59)
* feat(frontend): implement minimal web frontend with wallet connect (closes #16)

* style: format code with prettier
